
* Added ListInversion evolutionary operator.  Randomly reverses subsections of
  lists.

* Added variable probability constructor to ListOrderCrossover.

* Introduced support for island model evolution.

* Fixed generation numbering in EvolutionEngine.  It was supposed to be
  zero-based but was starting at 1, which would cause the GenerationCount
  termination condition to trigger prematurely.


Changes in version 0.6.2
------------------------

* Fix for thread leak in ConcurrentEvolutionEngine (ISSUE#16).  Added a
  finalizer to shutdown the thread pool in FitnessEvaluationWorker so that the
  active threads do not inhibit garbage collection.

* Made the FitnessEvaluationWorker in ConcurrentEvolutionEngine static so that
  it can be shared by all instances avoiding the unnecessary creation of new
  thread pools (ISSUE#16).

* Made fitness evaluation threads daemons again (as in 0.6.0).  Only standalone
  (i.e. Terracotta) FitnessEvaluationWorkers now use non-daemon threads.  This
  fixes the problem of the JVM not exiting when the program is finished
  (ISSUE#17).

* Better thread naming for fitness evaluation worker threads.


Changes in version 0.6.1
------------------------

* Added getSatisfiedTerminationConditions() method to the EvolutionEngine
  interface.  This makes it easier to determine which TerminationCondition
  caused the evolution to stop (ISSUE#13).

* Improvements to the genetic programming example application.

* Made StatusBar component public so that it can be used independently of the
  Evolution Monitor.

* Converted applet-based examples so that they can also run as applications in
  JFrames.

* Introduced Launcher class so that examples can be run easily from the command
  line.

* Changed the Mona Lisa example to accept the URL of an alternate image when
  run from the command line.

* Moved NullFitnessEvaluator from interactive package to framework package and