@@ -990,9 +990,9 @@
     <option name="shortCycleTableSpecificationString" value="" />
   </component>
   <component name="libraryTable">
-    <library name="uncommons-maths-1.2">
+    <library name="uncommons-maths-1.2.1">
       <CLASSES>
-        <root url="jar://$PROJECT_DIR$/../../lib/runtime/uncommons-maths-1.2.jar!/" />
+        <root url="jar://$PROJECT_DIR$/../../lib/runtime/uncommons-maths-1.2.1.jar!/" />
       </CLASSES>
       <JAVADOC />
       <SOURCES />
