@@ -23,7 +23,7 @@
     <dependency>
       <groupId>org.uncommons.maths</groupId>
       <artifactId>uncommons-maths</artifactId>
-      <version>1.2</version>
+      <version>1.2.1</version>
     </dependency>
     
     <dependency>
